force-app/main/default/objects/Cabin__c/Cabin__c.object-meta.xml
<CustomObject>
    <label>Cabin</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Cabin Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cabins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>