force-app/main/default/objects/Cabin__c/fields/Cabin_Type__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Type__c</fullName>
    <label>Cabin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>King</fullName>
            </value>
            <value>
                <fullName>Queen</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>