force-app/main/default/objects/Cabin__c/fields/Ship__c.field-meta.xml
<CustomField>
    <fullName>Ship__c</fullName>
    <label>Ship</label>
    <referenceTo>Ship__c</referenceTo>
    <relationshipLabel>Cabins</relationshipLabel>
    <relationshipName>Cabins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>