force-app/main/default/objects/Cabin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Occupied__c</columns>
    <columns>Ship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>